Better fix for overflow on small screen

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -148,7 +148,7 @@ main {
     flex-direction: column;
     justify-content: center;
     padding: 0 10px;
-    width: 100%;
+    width: 100vw;
     h1 {
       font-size: 2em;
     }
@@ -212,6 +212,7 @@ main {
     section {
       margin-bottom: 20px;
       height: auto;
+      width: 100%;
       content {
         block {
           h1 {
